src/objects/Case_Vendor_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Complaint - Newspaper</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Vendor Fees</relationshipLabel>
        <relationshipName>Case_Vendor_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Copies__c</fullName>
        <label>Number of Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paper_Fee__c</fullName>
        <label>Paper Fee</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Case Vendor Fees</relationshipLabel>
        <relationshipName>Case_Vendor_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subscription</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Zuora__Subscription__c.Subscription_Type_1__c</field>
                <operation>equals</operation>
                <value>Publication</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Case Vendor Fees</relationshipLabel>
        <relationshipName>Case_Vendor_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Vendor Fee</label>
    <nameField>
        <displayFormat>CVF-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Vendor Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>